Initial Commit of Infrastructure.Data Project, Update MVC for new UniversityDBContext

--- a/CleanArch/CleanArch.Mvc/appsettings.json
+++ b/CleanArch/CleanArch.Mvc/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "UniversityIdentityDBConnection": "Server=LAPTOP-UTB7RBED\\SQLEXPRESS;Database=UniversityIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UniversityIdentityDBConnection": "Server=LAPTOP-UTB7RBED\\SQLEXPRESS;Database=UniversityIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDBConnection": "Server=LAPTOP-UTB7RBED\\SQLEXPRESS;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
