Initial Commit of AutoMapper Demo Branch

--- a/CleanArch/CleanArch.Api/appsettings.json
+++ b/CleanArch/CleanArch.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "UniversityIdentityDBConnection": "Server=LAPTOP-UTB7RBED\\SQLEXPRESS;Database=UniversityIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDBConnection": "Server=LAPTOP-UTB7RBED\\SQLEXPRESS;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
